--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,37 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
-main{
+html{
     font-size: 62.5%;
 }
+/* HEADER */
 header{
+    display: flex;
     width: 100%;
+    padding: 0.5rem;
+    background-color: #d9d9d9;
+    align-items: center;
+}
+.Logo{
+    width: 8rem;
+}
+nav{
+    width: 100%;
+}
+.NavBar{
+    display: flex;
+    justify-content: flex-end;
+    column-gap: 40px;
+    font-size: 1.6rem;
+    margin-right: 20px;
+    font-family: 'Chakra Petch', sans-serif;
+}
+.NavBar li{
+    list-style: none;
+}
+.NavBar li a{
+    text-decoration: none;
+    color: black;
 }
