--- a/css/styles.css
+++ b/css/styles.css
@@ -8,11 +8,14 @@ html{
 }
 /* HEADER */
 header{
+    position: sticky;
+    top: 0;
     display: flex;
     width: 100%;
     padding: 0.5rem;
-    background-color: #d9d9d9;
+    background-color: rgb(255, 255, 255);
     align-items: center;
+    box-shadow: 10px 0 10px rgba(0, 0, 0, 0.2);
 }
 .Logo{
     width: 8rem;
@@ -23,9 +26,9 @@ nav{
 .NavBar{
     display: flex;
     justify-content: flex-end;
-    column-gap: 40px;
+    column-gap: 4rem;
     font-size: 1.6rem;
-    margin-right: 20px;
+    margin-right: 2rem;
     font-family: 'Chakra Petch', sans-serif;
 }
 .NavBar li{
@@ -33,5 +36,77 @@ nav{
 }
 .NavBar li a{
     text-decoration: none;
-    color: black;
+    color: rgb(0, 0, 0);
+}
+.NavBar li:hover{
+    transform: scale(1.1);
+}
+main{
+    background-color: rgb(217, 217, 217);
+}
+
+/* MAIN INDEX */
+.MainIndex{
+    display: flex;
+}
+.ImagenPersonaPc{
+    margin-left: 5rem;
+}
+.ImgL, .ImgR{
+    width: 20rem;
+}
+.ParNombre{
+    color: rgb(22, 161, 228);
+} 
+.ParApellido{
+    color: rgb(17, 40, 72);
+}
+.Nombre, .Apellido{
+    display: flex;
+    align-items: baseline;
+}
+.ParNombre, .ParApellido{
+    font-family: 'Audiowide', cursive;
+    font-size: 7rem;
+    padding-bottom: 10px;
+}
+
+/* MAIN PORTFOLIO */
+.FilaPortfolio{
+    display: flex;
+}
+.BoxFilaPortfolio a{
+    text-decoration: none;
+}
+.BoxFilaPortfolio{
+    margin: 20px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
+}
+.BoxFilaPortfolio p{
+    font-family: 'Chakra Petch', sans-serif;
+    text-align: center;
+    font-size: 2rem;
+    padding: 20px;
+    margin-top: 0;
+    color: rgb(0, 0, 0);
+    background-color: rgba(22, 159, 228, 0.555);
+}
+.BoxFilaPortfolio img{
+    width: 100%;
+}
+.BoxFilaPortfolio img:hover{
+    filter: saturate(200%);     
+}
+.BoxFilaPortfolio:hover{
+    transform: scale(1.05);
+}
+h2{
+    font-family: 'Audiowide', cursive;
+    font-size: 3.5rem;
+    color: rgb(22,159,228);
+    display: flex;
+    justify-content: center;
+    padding-top: 5rem;
+    padding-bottom: 3rem;
 }
