--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,15 @@
 html{
     font-size: 62.5%;
 }
+h2{
+    font-family: 'Audiowide', cursive;
+    font-size: 3.5rem;
+    color: rgb(22,159,228);
+    display: flex;
+    justify-content: center;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+}
 /* HEADER */
 header{
     position: sticky;
@@ -71,6 +80,35 @@ main{
     padding-bottom: 10px;
 }
 
+
+/* MAIN SKILLS */
+
+.FilaSkills{
+    display: flex;
+    padding-bottom: 6rem;
+}
+.FilaSkilsIzquierda, .FilaSkillsDerecha{
+    width: 50%;
+    display: flex;
+}
+.FilaIzquierdaImagen img, .FilaDerechaImagen img{
+    height: 10rem;
+}
+.FilaIzquierdaImagen,.FilaDerechaImagen {
+    width: 50%;
+    text-align: right;
+    padding-right: 6rem;
+}
+h3{
+    font-family: 'Audiowide', cursive;
+    font-size: 2rem;
+    color: #000;
+    padding-bottom: 10px;
+}
+.FilaDerehaTexto,.FilaIzquierdaTexto {
+    font-family: 'Audiowide', cursive;
+    font-size: 2rem;
+}
 /* MAIN PORTFOLIO */
 .FilaPortfolio{
     display: flex;
@@ -95,18 +133,5 @@ main{
 .BoxFilaPortfolio img{
     width: 100%;
 }
-.BoxFilaPortfolio img:hover{
-    filter: saturate(200%);     
-}
-.BoxFilaPortfolio:hover{
-    transform: scale(1.05);
-}
-h2{
-    font-family: 'Audiowide', cursive;
-    font-size: 3.5rem;
-    color: rgb(22,159,228);
-    display: flex;
-    justify-content: center;
-    padding-top: 5rem;
-    padding-bottom: 3rem;
-}
+
+
