--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ html{
     font-size: 62.5%;
 }
 h2{
-    font-family: 'Audiowide', cursive;
+    font-family: 'Chakra Petch', sans-serif;
     font-size: 3.5rem;
     color: rgb(22,159,228);
     display: flex;
@@ -80,6 +80,59 @@ main{
     padding-bottom: 10px;
 }
 
+
+
+
+/* MAIN SOBRE MI */
+.SobreMi{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    grid-template-rows: repeat(3,1fr);
+}
+.ImagenPersonaCafe{
+    grid-column: 1 / 3;
+    grid-row: 1 / 5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+h1{
+    grid-column: 3 / 5;
+    grid-row: 1 / 2;
+    font-family: 'Chakra Petch', sans-serif;
+    font-size: 3.5rem;
+    color: rgb(22,159,228);
+    display: flex;
+    justify-items: flex-start;
+    align-items: flex-end;
+    margin-bottom: 5rem;
+}
+.Parrafo{
+    grid-column: 3 / 6;
+    grid-row: 2 / 3;
+    font-family: 'Audiowide', cursive;
+    font-size: 2rem;
+    text-align: left;
+    line-height: 3rem;
+    margin-right: 1rem;
+}
+.DescargaCv{
+    grid-column: 4 / 5;
+    grid-row:   3 / 4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Chakra Petch', sans-serif;
+    font-size: 2.5rem;
+    color: rgb(255, 255, 255);
+}
+.DescargaCv a{
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    background-color: rgb(17, 40, 72);
+    padding: 1rem 2rem;
+    border-radius: 1rem;
+}
 
 /* MAIN SKILLS */
 
