--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
 html{
     font-size: 62.5%;
 }
+
 h2{
     font-family: 'Chakra Petch', sans-serif;
     font-size: 3.5rem;
@@ -14,6 +15,9 @@ h2{
     justify-content: center;
     padding-top: 5rem;
     padding-bottom: 5rem;
+}
+main{
+    background-color: rgb(217, 217, 217);
 }
 /* HEADER */
 header{
@@ -24,16 +28,20 @@ header{
     padding: 0.5rem;
     background-color: rgb(255, 255, 255);
     align-items: center;
-    box-shadow: 10px 0 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 10px 0 15px rgba(0, 0, 0, 0.2);
 }
 .Logo{
     width: 8rem;
+}
+.Logo:hover{
+    transform:scale(1.1);
 }
 nav{
     width: 100%;
 }
 .NavBar{
     display: flex;
+    flex-wrap: wrap;
     justify-content: flex-end;
     column-gap: 4rem;
     font-size: 1.6rem;
@@ -49,9 +57,7 @@ nav{
 }
 .NavBar li:hover{
     transform: scale(1.1);
-}
-main{
-    background-color: rgb(217, 217, 217);
+    text-shadow: 0.5px 0.5px 0.5px #000;
 }
 
 /* MAIN INDEX */
@@ -92,15 +98,17 @@ main{
 .ImagenPersonaCafe{
     grid-column: 1 / 3;
     grid-row: 1 / 5;
-    display: flex;
+    display:flex;
     justify-content: center;
     align-items: center;
+    margin: 1rem 0;
 }
+
 h1{
     grid-column: 3 / 5;
     grid-row: 1 / 2;
     font-family: 'Chakra Petch', sans-serif;
-    font-size: 3.5rem;
+    font-size: 4rem;
     color: rgb(22,159,228);
     display: flex;
     justify-items: flex-start;
@@ -121,7 +129,7 @@ h1{
     grid-row:   3 / 4;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: start;
     font-family: 'Chakra Petch', sans-serif;
     font-size: 2.5rem;
     color: rgb(255, 255, 255);
