--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,57 @@ nav{
 }
 
 /* MAIN INDEX */
+
 .MainIndex{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    grid-template-rows: repeat(4,1fr);
+}
+.ImagenPersonaPc{
+    grid-column: 1 / 3;
+    grid-row: 1 / 5;
+}
+.LogoL{
+    grid-column: 3 / 5;
+    grid-row: 1 / 2;
+}
+.ParrafoNombre{
+    grid-column: 4 / 5;
+    grid-row: 1 / 2;
+}
+.LogoR{
+    grid-column: 4 / 5;
+    grid-row: 2 / 3;
+}
+.ParrafoApellido{
+    grid-column: 5 / 6;
+    grid-row: 2 / 3;
+}
+.DesWeb{
+    grid-column: 4 / 5;
+    grid-row: 3 / 4;
+}
+.BotonContacto{
+    grid-column: 4 / 5;
+    grid-row: 4 / 5;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    font-family: 'Chakra Petch', sans-serif;
+    font-size: 2.5rem;
+    color: rgb(255, 255, 255);
+}
+.BotonContacto a{
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    background-color: rgb(17, 40, 72);
+    padding: 1rem 2rem;
+    border-radius: 1rem;
+}
+.LogoL, .LogoR{
+    width: 15rem;
+}
+/* .MainIndex{
     display: flex;
 }
 .ImagenPersonaPc{
@@ -84,7 +134,7 @@ nav{
     font-family: 'Audiowide', cursive;
     font-size: 7rem;
     padding-bottom: 10px;
-}
+} */
 
 
 
