--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,6 @@
 html{
     font-size: 62.5%;
 }
-
 h2{
     font-family: 'Chakra Petch', sans-serif;
     font-size: 3.5rem;
@@ -19,6 +18,7 @@ h2{
 main{
     background-color: rgb(217, 217, 217);
 }
+
 /* HEADER */
 header{
     position: sticky;
@@ -61,7 +61,6 @@ nav{
 }
 
 /* MAIN INDEX */
-
 .MainIndex{
     display: grid;
     grid-template-columns: repeat(5,1fr);
@@ -111,33 +110,6 @@ nav{
 .LogoL, .LogoR{
     width: 15rem;
 }
-/* .MainIndex{
-    display: flex;
-}
-.ImagenPersonaPc{
-    margin-left: 5rem;
-}
-.ImgL, .ImgR{
-    width: 20rem;
-}
-.ParNombre{
-    color: rgb(22, 161, 228);
-} 
-.ParApellido{
-    color: rgb(17, 40, 72);
-}
-.Nombre, .Apellido{
-    display: flex;
-    align-items: baseline;
-}
-.ParNombre, .ParApellido{
-    font-family: 'Audiowide', cursive;
-    font-size: 7rem;
-    padding-bottom: 10px;
-} */
-
-
-
 
 /* MAIN SOBRE MI */
 .SobreMi{
@@ -153,7 +125,6 @@ nav{
     align-items: center;
     margin: 1rem 0;
 }
-
 h1{
     grid-column: 3 / 5;
     grid-row: 1 / 2;
@@ -193,7 +164,6 @@ h1{
 }
 
 /* MAIN SKILLS */
-
 .FilaSkills{
     display: flex;
     padding-bottom: 6rem;
@@ -220,6 +190,7 @@ h3{
     font-family: 'Audiowide', cursive;
     font-size: 2rem;
 }
+
 /* MAIN PORTFOLIO */
 .FilaPortfolio{
     display: flex;
@@ -245,4 +216,61 @@ h3{
     width: 100%;
 }
 
-
+/* MAIN CONTACTO */
+.Formulario{
+    margin-bottom: 5px;
+    padding-top: 15px;
+}
+/* ESTADO REPOSO */
+label{
+    display: block;
+    width: 200px;
+    border: 2px solid silver;
+    padding: 8px 10px;
+    position: relative;
+    box-sizing: border-box;
+    border-radius: 4px;
+    transition: .25s;
+}
+label input{
+    display: block;
+    width: 100%;
+    border: none;
+    background: transparent;
+    outline: none;
+    font: 16px/16px;
+    font-family: 'Chakra Petch', sans-serif;
+    padding: 0;
+}
+label textarea{
+    display: block;
+    width: 100%;
+    border: none;
+    background: transparent;
+    outline: none;
+    font: 16px/16px;
+    padding: 0;
+}
+label span{
+    color: silver;
+    font-family: 'Chakra Petch', sans-serif;
+    position: absolute;
+    top: 8px;
+    left: 10px;
+    transition: .25s;
+}
+/* ESTADO FOCUS */
+label.focus{
+    border-color: rgba(22, 159, 228, 0.555);
+}
+label span.focus{
+    color: rgba(22, 159, 228, 0.555);
+}
+/* ESTADO TOP */
+label span.top{
+    left: 2px;
+    top: -10px;
+    font-size: 12px;
+    background: rgb(217, 217, 217);
+    padding: 0 10px;
+}
