--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,10 @@ header{
     background-color: rgb(255, 255, 255);
     align-items: center;
     box-shadow: 10px 0 15px rgba(0, 0, 0, 0.2);
+    z-index: 100px;
+}
+.Header{
+    z-index: 100rem;
 }
 .Logo{
     width: 8rem;
@@ -67,28 +71,42 @@ nav{
     grid-template-rows: repeat(4,1fr);
 }
 .ImagenPersonaPc{
-    grid-column: 1 / 3;
+    grid-column: 1 / 2;
     grid-row: 1 / 5;
 }
 .LogoL{
-    grid-column: 3 / 5;
+    grid-column: 2 / 4;
     grid-row: 1 / 2;
+    display: flex;
 }
-.ParrafoNombre{
-    grid-column: 4 / 5;
-    grid-row: 1 / 2;
+.LogoL p{
+    font-family: 'Audiowide', cursive;
+    font-size: 6rem;
 }
+.LogoR p{
+    font-family: 'Audiowide', cursive;
+    font-size: 6rem;
+}
+
 .LogoR{
-    grid-column: 4 / 5;
+    grid-column: 3 / 5;
     grid-row: 2 / 3;
+    display: flex;
 }
 .ParrafoApellido{
     grid-column: 5 / 6;
     grid-row: 2 / 3;
 }
 .DesWeb{
-    grid-column: 4 / 5;
+    grid-column: 3 / 6;
     grid-row: 3 / 4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.DesWeb p{
+    font-family: 'Chakra Petch', sans-serif;
+    font-size: 4rem;
 }
 .BotonContacto{
     grid-column: 4 / 5;
@@ -107,8 +125,8 @@ nav{
     padding: 1rem 2rem;
     border-radius: 1rem;
 }
-.LogoL, .LogoR{
-    width: 15rem;
+.LogoL img, .LogoR img{
+    width: 20rem;
 }
 
 /* MAIN SOBRE MI */
@@ -203,6 +221,9 @@ h3{
     background-color: rgb(255, 255, 255);
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
 }
+.BoxFilaPortfolio:hover{
+    transform: scale(1.01);
+}
 .BoxFilaPortfolio p{
     font-family: 'Chakra Petch', sans-serif;
     text-align: center;
@@ -221,6 +242,10 @@ h3{
     margin-bottom: 5px;
     padding-top: 15px;
 }
+.FilasContacto{
+    display: flex;
+    justify-content: center;
+}
 /* ESTADO REPOSO */
 label{
     display: block;
@@ -231,6 +256,18 @@ label{
     box-sizing: border-box;
     border-radius: 4px;
     transition: .25s;
+    margin: 0 15px;
+}
+textarea{
+    display: block;
+    width: 400px;
+    border: 2px solid silver;
+    padding: 8px 10px;
+    position: relative;
+    box-sizing: border-box;
+    border-radius: 4px;
+    transition: .25s;
+    
 }
 label input{
     display: block;
