--- a/css/styles.css
+++ b/css/styles.css
@@ -140,17 +140,20 @@ nav{
     display: grid;
     grid-template-columns: repeat(5,1fr);
     grid-template-rows: repeat(3,1fr);
+    grid-template-areas: 
+    "ImagenPersonaCafe ImagenPersonaCafe h1 h1 h1"
+    "ImagenPersonaCafe ImagenPersonaCafe Parrafo Parrafo Parrafo"
+    "ImagenPersonaCafe ImagenPersonaCafe DescargaCv DescargaCv DescargaCv"
+    ;
 }
 .ImagenPersonaCafe{
-    grid-column: 1 / 3;
-    grid-row: 1 / 5;
+    grid-area: ImagenPersonaCafe;
     display:flex;
     justify-content: center;
     align-items: center;
 }
 h1{
-    grid-column: 3 / 5;
-    grid-row: 1 / 2;
+    grid-area: h1;
     font-family: 'Chakra Petch', sans-serif;
     font-size: 4rem;
     color: rgb(22,159,228);
@@ -160,8 +163,7 @@ h1{
     margin-bottom: 5rem;
 }
 .Parrafo{
-    grid-column: 3 / 6;
-    grid-row: 2 / 3;
+    grid-area: Parrafo;
     font-family: 'Audiowide', cursive;
     font-size: 2rem;
     text-align: left;
@@ -169,8 +171,7 @@ h1{
     margin-right: 1rem;
 }
 .DescargaCv{
-    grid-column: 4 / 5;
-    grid-row:   3 / 4;
+    grid-area: DescargaCv;
     display: flex;
     justify-content: center;
     align-items: start;
