--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ html{
 }
 h2{
     font-family: 'Chakra Petch', sans-serif;
-    font-size: 3.5rem;
+    font-size: 5rem;
     color: rgb(22,159,228);
     display: flex;
     justify-content: center;
@@ -252,6 +252,22 @@ h3{
     display: flex;
     justify-content: center;
 }
+.ParrafoContacto{
+    font-family: 'Audiowide', cursive;
+    font-size: 2rem;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 2rem;
+}
+.ENVIAR input{
+    font-family: 'Chakra Petch', sans-serif;
+    font-size: 2.5rem;
+    color: rgb(255, 255, 255);
+    background-color: rgb(17, 40, 72);
+    padding: 1rem 2rem;
+    border-radius: 1rem;
+    margin: 20px 0;
+}
 /* ESTADO REPOSO */
 label{
     display: block;
@@ -262,11 +278,11 @@ label{
     box-sizing: border-box;
     border-radius: 4px;
     transition: .25s;
-    margin: 0 15px;
+    margin: 5px 20px;
 }
-textarea{
+#LabelComentario{
     display: block;
-    width: 400px;
+    width: 440px;
     border: 2px solid silver;
     padding: 8px 10px;
     position: relative;
