--- a/css/styles.css
+++ b/css/styles.css
@@ -413,7 +413,8 @@ footer{
     transition: 1s;
     transform: scale(1.1);
 }
-/* TABLET */
+
+/* MEDIA QUERIES TABLET */
 @media (max-width: 768px) {
     /* HEADER */
     .Logo{
@@ -445,22 +446,80 @@ footer{
     .BoxFilaPortfolio p{
         font-size: 1.7rem;
     }
-
     }
 
-/* @media(max-width: 576px) {
-    .MainIndex{
-        display: grid;
-        grid-template-columns: repeat(3,1fr);
-        grid-template-rows: repeat(4,1fr);
-        grid-template-areas: 
-        "ImagenPersonaPc ImagenPersonaPc"
-        "ImagenPersonaPc ImagenPersonaPc"
-        "LogoL LogoL"
-        "LogoR LogoR"
-        ;
+    /* MEDIA QUERIES CELULAR */
+    @media (max-width: 576px){
+        .Logo{
+            width: 20%;
+        }
+        .NavBar{
+            flex-direction: column;
+        }
+        /* MAIN INDEX */
+        .MainIndex{
+            display: flex;
+            flex-direction: column;
+        }
+        .ImagenPersonaPc{
+            display: none;
+        }
+        .LogoL img, .LogoR img{
+            width: 25%;
+        }
+        .LogoL, .LogoR{
+            margin-bottom: 30px;
+        }
+        .DesWeb p{
+            margin-bottom: 50px;
+        }
+        /* MAIN SOBRE MI */
+        .SobreMi{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .ImagenPersonaCafe{
+            display: none;
+        }
+        h1{
+            margin-top: 50px;
+        }
+        .Parrafo{
+            font-size: 2.3rem;
+            text-align: center;
+            margin-bottom: 60px;
+        }
+        /* MAIN SKILLS */
+        .FilaIzquierdaImagen img, .FilaDerechaImagen img{
+            height: 6rem;
+        }
+        .FilaDerehaTexto,.FilaIzquierdaTexto{
+            font-size: 1.1rem;
+        }
+        /* MAIN PORTFOLIO */
+        .FilaPortfolio{
+            justify-content: center;
+        }
+        .BoxFilaPortfolio{
+            margin: 20px 5px;
+        }
+        /* MAIN CONTACTO */
+        .ParrafoContacto{
+            font-size: 1.5rem;
+            text-align: center;
+        }
+        .BoxFilaPortfolio p{
+            font-size: 1.5rem;
+        }
+        label{
+            width: 180px;
+            margin:1px 5px;
+        }
+        #LabelComentario{
+            width: 370px;
+        }
     }
-} */
 
 /* ANIMACIONES */
 @keyframes Portfolio {
