--- a/css/styles.css
+++ b/css/styles.css
@@ -38,17 +38,21 @@ header{
     z-index: 1;
 }
 .Logo{
-    width: 10%;
+    width: 8%;
     transition: 1s;
     filter: drop-shadow(5px 5px 2px #808080);
 }
 .Logo:hover{
     transform:rotate(-10deg);
 }
-nav{
-    width: 100%;
+.navbar-collapse{
+    text-align: center;
 }
-.NavBar{
+
+/* nav{
+    justify-content: right;
+} */
+/* .NavBar{
     display: flex;
     justify-content: flex-end;
     column-gap: 4rem;
@@ -67,7 +71,7 @@ nav{
     transition: 1s;
     transform: scale(1.1);
     text-decoration: solid #000;
-}
+} */
 
 /* MAIN INDEX */
 .MainIndex{
@@ -417,9 +421,9 @@ footer{
 /* MEDIA QUERIES TABLET */
 @media (max-width: 768px) {
     /* HEADER */
-    .Logo{
-        width: 15%;
-    }
+    /* .Logo{
+        width: 10%;
+    } */
     main{
         height: 100%;
     }
@@ -472,6 +476,7 @@ footer{
         }
         .DesWeb p{
             margin-bottom: 50px;
+            text-align: center;
         }
         /* MAIN SOBRE MI */
         .SobreMi{
