--- a/css/estilos-viejos.css
+++ b/css/estilos-viejos.css
@@ -32,7 +32,7 @@ header{
     display: flex;
     width: 100%;
     padding: 5px;
-    background-color: #ffffff;
+    background-color: rgb(255, 255, 255);
     align-items: center;
     box-shadow: 10px 0 15px #00000033;
     z-index: 1;
