--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,11 @@
 @import "./base/typo";
+@import "./utilities/variables";
+@import "./utilities/mixins";
 @import "./base/reset";
+
+html{
+    font-size: 62.5%
+}
 @import "./components/bootstrap";
 @import "./components/button";
 @import "./layout/header";
@@ -9,5 +15,3 @@
 @import "./layout/mainPortfolio";
 @import "./layout/MainContacto";
 @import "./layout/footer";
-@import "./utilities/variables";
-@import "./utilities/mixins";
