--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,13 +2,16 @@
 @import "./utilities/variables";
 @import "./utilities/mixins";
 @import "./base/reset";
-
 html{
     font-size: 62.5%
 }
+main{
+    background-color: $BackgroundPrincipal;
+    min-height: 100vh;
+}
+@import "./layout/header";
 @import "./components/bootstrap";
 @import "./components/button";
-@import "./layout/header";
 @import "./layout/mainIndex";
 @import "./layout/mainSobreMi";
 @import "./layout/mainSkills";
