--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -7,7 +7,7 @@ header{
 }
 .Logo{
     @include Medidas(10%, 10%, 10px, 0);
-    filter: drop-shadow(5px 5px 2px #808080);
+    @include SombraClara;
     transition: 1s;
 }
 .Logo:hover{
