--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -1,11 +1,40 @@
+
+// BACKGROUND
+
 $BackgroundPrincipal: #d9d9d9;
 
 $BackgroundSecundario: #ffffff;
+
+$BackgroundTres: #169fe4;
+
+$BackgroundCuatro: #112848;
+
+// COLOR TEXTO
+
+$ColorBoton: #ffffff;
 
 $ColorPrimario: #169fe4;
 
 $ColorSecundario: #112848;
 
+$ColorNegro: #000000;
+
+// FUENTES
+
 $FuentePrincipal: 'Chakra Petch', sans-serif;
 
 $FuenteSecundaria: 'Audiowide', cursive;
+
+// SOMBRAS
+
+$SombraTexto: 2px 2px 2px #808080;
+
+$SombraOscura: 5px 5px 2px #626262;
+
+$SombraClara: 5px 5px 2px #808080;
+
+$SombraBox: 2px 1px 3px #808080;
+
+// ANIMACION
+
+$Time: 2s
